dataset1235/2025-2/2947369575/users/2667057248/executions/3873599344_359632665.log
== RUN (2025-08-20 23:00:10)
-- CODE: 
print(round250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round250/6)
          ^^^^^^^^
NameError: name 'round250' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round250/6)
          ^^^^^^^^
NameError: name 'round250' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:02:50)
-- CODE: 
print(round(250/6,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:51)
-- CODE: 
printround(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printround(250/6)
    ^^^^^^^^^^
NameError: name 'printround' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printround(250/6)
    ^^^^^^^^^^
NameError: name 'printround' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:45)
-- CODE: 
print(250/6)round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250/6)
                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250/6)
                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:27)
-- CODE: 
print(250/6)round
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round
                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round
                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:02:47)
-- CODE: 
print(round(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:58:50)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:01:17)
-- CODE: 
print(roud(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(roud(250/6,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(roud(250/6,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:01:22)
-- CODE: 
print(roud(250/6,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(roud(250/6,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(roud(250/6,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:00:07)
-- CODE: 
print(round 250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round 250/6)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round 250/6)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
